# 531Calculator

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
server/: .dockerignore  .pylintrc  Dockerfile  app.py  setup.cfg
server/fivethreeonecalc/: __init__.py  app.py
server/fivethreeonecalc/routes/: calculator.py
server/routes/: calculate.py
server/tests/: conftest.py  data_handler.py  test_app.py  warmup_tests.json
ui/: .env.dev-docker  .env.docker  Dockerfile  nginx.conf  package-lock.json  package.json
ui/public/: index.html  manifest.json  pwabuilder-adv-sw.js  site.webmanifest
ui/src/: App.scss  App.test.tsx  App.tsx  reportWebVitals.ts  setupProxy.js
ui/src/components/calculator/: CalculatorForm.tsx  Form.ts  RadioButtonToggleGroups.tsx  WarmupModal.tsx  WeightInput.tsx
ui/src/components/nav/: Navbar.scss  Navbar.test.tsx  Navbar.tsx
ui/src/services/: ApiService.ts  LocalStorageService.ts
ui/src/shared/: Constants.ts
