[metadata]
name = fivethreeonecalc
version = 0.2.0
author = ceruleanskis
author_email = ceruleanskis@protonmail.com
description =  531 Calculator is an app that calculates your weights and warmups based off of your percentages from the 5/3/1 weightlifting program.
url = https://github.com/ceruleanskis/531Calculator
project_urls =
    Tracker = https://github.com/ceruleanskis/531Calculator/issues
    Release notes = https://github.com/ceruleanskis/531Calculator/releases
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Flask
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Werkzeug==2.2
    Flask==2.0.3

[options.entry_points]
console_scripts =
    run-531 = fivethreeonecalc:create_app